Fixed alignment of some images.

--- a/app/assets/stylesheets/usershow.scss
+++ b/app/assets/stylesheets/usershow.scss
@@ -73,7 +73,7 @@
 
 .post-grid-square img{
   // height: 100%;
+  
   width: 100%;
   display: block;
-  margin-right: 100px;
 }
